[tool.poetry]
name = "llmagent4mle-data-preparation-agent"
version = "0.1.0"
description = ""
authors = ["jamway <weichuangchan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
swarm = {git = "https://github.com/openai/swarm.git"}
openai = "^1.54.3"
pandas = "^2.2.3"
numpy = "^2.1.3"
fuzzywuzzy = "^0.18.0"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
