[tool.poetry]
name = "llmagent4mle-data-preparation-agent"
version = "0.1.0"
description = ""
authors = ["jamway <weichuangchan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
fuzzywuzzy = "^0.18.0"
ag2 = "^0.3.2"
pyautogen = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
