[tool.poetry]
name = "llmagent4mle-data-preparation-agent"
version = "0.1.0"
description = ""
authors = ["jamway <weichuangchan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
swarm = {git = "https://github.com/openai/swarm.git"}
openai = "^1.54.3"
pandas = "^2.2.3"
numpy = ">1.17.0,<2"
fuzzywuzzy = "^0.18.0"
scikit-learn = "^1.5.2"
ag2 = "^0.3.2"
pyautogen = "^0.3.2"
openpyxl = "^3.1.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
